<resources>
    <string name="app_name">Quizzer</string>
    <string name="start_quiz">Play!</string>
    <string name="high_score">High Score: </string>
    <string name="quizzer">Jasens Quizzer</string>
    <string name="score">Score: 0</string>
    <string name="qest_counter">Question: 0/0</string>
    <string name="score_counter">Highscore: 0</string>
    <string name="submit_quest">Submit</string>
    <string name="opt4">Opt4</string>
    <string name="opt3">Opt3</string>
    <string name="opt2">Opt2</string>
    <string name="opt1">Opt1</string>
    <string name="question_placeholder">Question_Placeholder</string>
    <string name="question_counter_header">Question #:</string>
    <string name="timer">0:00</string>
    <string name="score_counter_header">Score:</string>
    <string name="create_quiz_button">Create a Quiz</string>
    <string name="submit_qest_button">Confirm</string>
    <string name="button_finish_quiz">Finish</string>
    <string name="button_answer_understood">Next</string>
    <string name="difficulty">Difficulty:</string>
    <string name="no_qiuz_message">No Quiz</string>
    <string name="cat_header_text">Category: </string>
    <string name="refresh">Refresh</string>
    <string name="loading">Loading...</string>
</resources>